tools/flowc/tests/nim/test_hostcall.flow
import sys/target;
/*
native hostCall : io (name: string, args: [flow]) -> flow = Native.hostCall;
native quit : io (code : int) -> void = Native.quit;
native println2 : io (flow) -> void = Native.println;
native concat : ([?], [?]) -> [?] = Native.concat;
*/
// fn1(arr : [flow]) -> flow {
// 	println2(arr);
// 	0
// }

main() {
	println2(concat([1], [2]));
	// fn1([1, 2]);
	// res = hostCall("concat", [[1, 2], [3, 4]]); // error: wrong cast : result [1, 3]
	println2(hostCall(if (java) "Native.concat" else "concat", [[1], [4]]));
	println2(hostCall(if (java) ("Native." + "concat") else ("con" + "cat"), [[1], [4]]));


	println2(hostCallExists(if (java) "Native.println" else "println2"));
	hostCall(if (java) "Native.println" else "println2", ["flow9"]);

	println2(hostCallExists(if (java) ("Native." + "println") else ("print" + "ln2")));
	hostCall(if (java) ("Native." + "println") else ("print" + "ln2"), ["flow9"]);
	println2(if (java) getOsFlow() else hostCall("getOs", []));

	println2(hostCallExists(if (java) ("Native." + "println?") else ("print" + "ln2_?")));

	quit(0);
}